need button built, cosole log click

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
             <button type="submit">Add item</button>
         </form>
+        <button class="js-view-all-button">
+          <span class="button-label">All / Still Needed</span>
+      </button>
         <ul class="shopping-list js-shopping-list">
         </ul>
     </div>
