early search thoughts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <form id="js-shopping-list-form">
             <label for="shopping-list-entry">Add an item</label>
             <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
-            <button type="submit">Add item</button>
+            <button type="submit" class="js-submit-entry">Add item</button>
+            <button type="submit" class="js-search-entry">Search</button>
         </form>
         <button class="js-view-all-button">
           <span class="button-label">All / Still Needed</span>
